--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,5 @@ dependencies = [
 ]
 
 [build-system]
-requires = ["setuptools>=61.0"] # Dipendenze necessarie per costruire il pacchetto
-build-backend = "setuptools.build_meta" # Il backend effettivo che esegue la build
-
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
